[package]
name = "mould-file"
version = "0.0.6"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
readme = "README.md"
description = "File reading/writing services for Mould framework."
repository = "https://github.com/DenisKolodin/mould-file"
license = "MIT/Apache-2.0"

[dependencies]
mould = "0.0.17"
permission = "0.1.0"
